# zenki

./: .codespellrc  .gitignore  Cargo.toml  DDL.ipynb  README.md  flake.nix  steam2.drawio
.cargo/: config.toml
database/: DDL.ipynb
database/migrations/: 001_initial.sql  002_modify_passwd_len.sql  003_rename_purchase_n_dlc.sql  004_change_amount_transaction_int.sql
database/uml/: zenki.drawio
src/: app.rs  auth.rs  lib.rs  main.rs  route.rs
src/page/: home.rs  login.rs  main.rs  mod.rs  register.rs
zenki-backend/: Cargo.toml
zenki-backend/src/: activity.rs  auth.rs  developer.rs  friendship.rs  game.rs  lib.rs  purchase.rs  review.rs  tag.rs  transaction.rs  user.rs
zenki-frontend/: Cargo.toml
zenki-frontend/src/: activity.rs  app.rs  auth.rs  developer.rs  friendship.rs  game.rs  item.rs  lib.rs  main.rs  review.rs  route.rs  tag.rs  transaction.rs  user.rs
zenki-frontend/src/page/: account.rs  developer.rs  game.rs  home.rs  item.rs  login.rs  main.rs  mod.rs  register.rs  tag.rs  transaction.rs  user.rs
zenki-frontend/style/: main.scss
zenki-util/: Cargo.toml
zenki-util/src/: lib.rs
